implemented edits during final proofs

--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -110,7 +110,9 @@
 @misc{boersma-weenink2022,
   title = {Praat: {{Doing}} Phonetics by Computer [{{Computer}} Program]},
   author = {Boersma, Paul and Weenink, David},
-  year = {1992-2022}
+  year = {1992-2022},
+  address={Amsterdam},
+  publisher={University of Amsterdam}
 }
 
 @article{boberg2019,
@@ -186,6 +188,7 @@
   booktitle={Manual of clinical phonetics},
   pages={108--138},
   year={2021},
+  address={London},
   publisher={Routledge}
 }
 
@@ -275,6 +278,7 @@
   author = {Elert, Claes-Christian},
   year = {1994},
   series = {Diabas},
+  address = {Umeå},
   volume = {4},
   pages = {215--228},
   publisher = {{Institutionen f\"or nordiska spr\aa k vid Ume\aa{} Universitet}}
@@ -386,7 +390,7 @@
 
 @article{fant1969,
   title = {Formant Frequencies of {{Swedish}} Vowels},
-  author = {Fant, Gunnar and Henningsson, G and St{\aa}lhammar, U},
+  author = {Fant, Gunnar and Henningsson, G and St{\aa}lhammar, Ulf},
   year = {1969},
   journal = {STL-QPSR},
   volume = {10},
@@ -398,9 +402,9 @@
 
 @incollection{fant1971,
   title = {Notes on the {{Swedish Vowel System}}},
-  booktitle = {Form and Substance: Phonetic and Linguistic Papers.},
+  booktitle = {Form and Substance: Phonetic and Linguistic Papers presented to Eli {Fischer-J{\o}rgensen}},
   author = {Fant, Gunnar},
-  editor = {Hammerich, Louis and Jakobson, Roman and Zwirner, Eberhard and {Fischer-J{\o}rgensen}, Eli},
+  editor = {Hammerich, Louis and Jakobson, Roman and Zwirner, Eberhard},
   year = {1971},
   publisher = {{Andelsbogtrykkeriet}},
   address = {{Odense}}
@@ -498,7 +502,7 @@
   title = {Revisiting pitch slope and height effects on perceived duration},
   author = {Gussenhoven, Carlos and Zhou, Wencui},
   year = {2013},
-  series = {Interspeech 2013 {{Conference}}},
+  series = {Interspeech 2013: 14th Annual Conference of the International Speech Communication Association},
   doi = {10.21437/Interspeech.2013-360},
   pages = {1365--1369},
   city = {Jeju Island, Korea}
@@ -681,6 +685,7 @@
   eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/9781119184096.ch6},
   pages = {145--176},
   publisher = {{John Wiley \& Sons, Inc}},
+  address = {Oxford},
   doi = {10.1002/9781119184096.ch6},
   abstract = {Summary Speech produced by different people varies acoustically because of individual differences in vocal tract physiology. This acoustic variation in the ``same'' words of language presents a practical problem for linguists and engineers, as well as a theoretical problem in the study of speech perception. This chapter reviews some practical vowel-normalization methods and discusses the perceptual processes that listeners may use to accomplish speech recognition in the face of talker variation, with a general overview of cortical organization for talker normalization and speech perception. The chapter reviews evidence that there are aspects of auditory processing that help remove talker differences during speech perception - in auditory spectral encoding; and in contrast coding in an auditory frame of reference that seems to apply before lexical processing begins.},
   chapter = {6},
@@ -696,6 +701,7 @@
   year = {2005},
   month = jan,
   pages = {363--389},
+  address = {Oxford},
   publisher = {{John Wiley \& Sons, Inc.}},
   abstract = {Summary This chapter contains sections titled: Perceiving Vowels in Isolated Syllables Formant Ratio Theories From Auditory Gestalts to Vocal Tract Actions Vocal Tract Normalization Talkers or Vocal Tractsquest; Talker Normalization},
   isbn = {9780470757024},
@@ -989,7 +995,7 @@
   title = {Phonetic {{Feature Systems}} for {{Vowels}}},
   author = {Nearey, Terrance M},
   year = {1978},
-  series = {Indiana {{University Linguistics Club}}},
+  publisher = {Indiana {{University Linguistics Club}}},
   address = {{Indiana}}
 }
 
@@ -1077,7 +1083,7 @@
   title = {Comparing accounts of formant normalization against {US} {E}nglish listeners' vowel perception},
   author = {Persson, Anna and Barreda, Santiago and Jaeger, T Florian},
   year = {2024},
-  publisher = {Manuscript; Stockholm University}
+  publisher = {Manuscript submitted for publication; Stockholm University}
 }
 
 @article{peterson-barney1952,
@@ -1294,7 +1300,7 @@ year = {2018}
 
 @article{stalhammar1973,
   title = {Contextual effects on vowel nuclei},
-  author = {St{\aa}lhammar, U. and Karlsson, I. and Fant, Gunnar},
+  author = {St{\aa}lhammar, Ulf and Karlsson, I. and Fant, Gunnar},
   year = {1973},
   journal = {STL-QPSR},
   volume = {14},
@@ -1446,7 +1452,7 @@ year = {1995},
 issn = {0095-4470},
 doi = {https://doi.org/10.1016/S0095-4470(95)80165-0},
 url = {https://www.sciencedirect.com/science/article/pii/S0095447095801650},
-author = {D.H. Whalen and Andrea G. Levitt}
+author = {Douglas H. Whalen and Andrea G. Levitt}
 }
 
 @article{wieling2018,
