--- a/output/papers/SI.Rmd
+++ b/output/papers/SI.Rmd
@@ -1,7 +1,7 @@
 \newpage
 \setcounter{page}{1}
 
-# Supplementary information for *Persson (2024). The acoustic characteristics of Central Swedish* {-}
+# Supplementary information for *Persson (2024). The acoustic characteristics of Swedish vowels* {-}
 Both the main text and these supplementary information (SI) are derived from the same R markdown document available via OSF at  [https://osf.io/7uvj4/](https://osf.io/7uvj4/).
 
 \setcounter{section}{1}
@@ -427,7 +427,7 @@ For the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl
 
 (ref:separability-SI) The increase in category separability relative to F1-F2-baseline for different cue combinations and the long-short vowel pairs. Pointranges indicate mean and 95% bootstrapped CIs of the category separability summarized across talkers for each cue combination.
 
-```{r separability-SI, message=FALSE, fig.width=base.width*4, fig.height=base.height*3, fig.align='center', fig.cap="(ref:separability-SI)"}
+```{r separability-SI, message=FALSE, fig.width=base.width*4, fig.height=base.height*3, fig.align='center', fig.pos="ht", fig.cap="(ref:separability-SI)"}
 d.SwehVd.cat.separability.for.longshort.SI %<>%
   mutate(
     cue_dimension = factor(cue_dimension, levels = c("F1F2", "F1F3", "F2F3", "F1F2F3", "F1Duration", "F2Duration", "F1F2Duration")))
@@ -620,7 +620,7 @@ d.SwehVd.cat.separability.talkerIndep <- rbind(
       F1F2F3_separability = mean(category_separabilityF1F2F3, na.rm = T))
 ```
 
-```{r SI-cat-sep-F3, fig.align='center', fig.width=base.width*3.5, fig.height=base.height*4, out.width='90%', fig.cap="(ref:SI-cat-sep-F3)", message=FALSE}
+```{r SI-cat-sep-F3, fig.align='center', fig.width=base.width*3.5, fig.height=base.height*4, out.width='90%', fig.pos="ht", fig.cap="(ref:SI-cat-sep-F3)", message=FALSE}
 colors.comparison <- c("#FC8D62", "#FB9A99", "#1B9E77", "#8DA0CB", "#A6CEE3", "#33A02C")
 names(colors.comparison) <- c("iː - yː",  "eː - yː", "ɪ - ʏ", "yː - ʉː", "oː - uː", "ɔ - ʊ")
 
@@ -845,7 +845,7 @@ d.SwehVd.cat.separability.for.longshort.talkerIndep %<>%
 
 (ref:SI-cat-sep-long-short) The effect of including F3 and duration in measures of category separability for long-short vowel pair distinctions, under the assumption of talker-independent representations. For visualization purposes, the pairs are split into high vowels (**top row**), and lower-mid vowels (**bottom row**). **Left panels** plot the category separability for F1-F2, F1-F2-F3 and F1-F2-duration cue combinations. **Right panels** plot the increase in category separability relative to F1-F2-baseline. Axis ranges are held constant across columns.
 
-```{r SI-cat-sep-long-short, fig.width=base.width*4, fig.height=base.height*4.5, out.width='100%', fig.align='center', fig.cap="(ref:SI-cat-sep-long-short)", message=FALSE}
+```{r SI-cat-sep-long-short, fig.width=base.width*4, fig.height=base.height*4.5, out.width='100%', fig.align='center', fig.pos="ht", fig.cap="(ref:SI-cat-sep-long-short)", message=FALSE}
 colors.comparison <- c("#66C2A5", "#FC8D62", "#8DA0CB", "#FB9A99", "#E7298A", "#A6D854", "#FFD92F", "#E5C494", "#B3B3B3", "#A6CEE3", "#33A02C")
 names(colors.comparison) <- c("iː - ɪ",  "yː - ʏ", "ʉː - ɵ", "eː - ɛ", "ɛː - ɛ", "æː - æ", "øː - ø", "œː - œ", "ɑː - a",  "oː - ɔ", "uː - ʊ")
 
@@ -908,6 +908,8 @@ rm(d.SwehVd.cat.separability.comparison.longshort.talkerIndep, d.SwehVd.cat.sepa
 #gamtabs(m.F2.front.long.Y.ord, caption='Model summary, coefficients for parametric and smooth terms', label = "tab:m.F2.front.long.Y.ord")
 #gamtabs(m.F3.front.long.Y.ord, caption='Model summary, coefficients for parametric and smooth terms', label = "tab:m.F3.front.long.Y.ord")
 ```
+
+\newpage
 
 ## Additional information concerning dynamic analyses
 ### Summary tables of GAMMs {#sec:SI-GAMMs}
@@ -2187,6 +2189,7 @@ B. smooth terms & edf & Ref.df & F-value & p-value \\
 
 ```{r}
 ```
+\newpage
 
 ### Visualizations of GAMMs {#sec:SI-GAMMs-figs}
 Figures \@ref(fig:SI-m-I-Y), \@ref(fig:SI-m-U-E), \@ref(fig:SI-m-ER), \@ref(fig:SI-m-OER), \@ref(fig:SI-m-OA), and \@ref(fig:SI-m-O) visualize the GAMMs fit to the long-short vowel pairs.
